# HARTOS

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.mock-llm  HARTOS_SPEECH.md  INTEGRATION_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  SESSION_SUMMARY.md  agent_identity.py  boot_vm.sh  chat.py  chat2.py  chat3.py  chat4.py  chat_4_gpt.py  chat_gpt_2.py  chat_with_gpt.py  claw_bridge.pyd  coding_agent_requirements.txt  compact-wsl.ps1  config.json  config.py  create_recipe.py  crossbar_server.py  cultural_wisdom.py  custom_gpt.py  demo.py  demo_ecommerce_ap2.py  demo_ecommerce_ap2_simple.py  documents.txt  dontknow.py  (+60 more)
.github/: CODEOWNERS
agent-ledger-opensource/: .gitignore  AGENT_LEDGER_GUIDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agent-ledger-opensource/agent_ledger/: __init__.py  backends.py  core.py  distributed.py  factory.py  graph.py  heartbeat.py  pubsub.py  verification.py
agent-ledger-opensource/examples/: basic_usage.py
agent-ledger-opensource/tests/: __init__.py  test_core.py  test_overhaul.py
agent_data/: 8888_agent_data.json  9003_agent_data.json  ledger_10077_8888.json  ledger_10077_9999.json  ledger_12345_77777.json  ledger_12345_88888.json  ledger_12345_99999.json  ledger_456_123_456.json  ledger_67890_12345_67890.json  ledger_803086_75804.json  ledger_803086_75805.json  ledger_835199_79517.json  ledger_835199_79518.json  ledger_83724_997872_83724.json  ledger_843452_76934.json  ledger_843452_76935.json  ledger_889197_77772.json  ledger_889197_77773.json  ledger_889861_70887.json  ledger_889861_70888.json  ledger_909275_84969.json  ledger_939693_84129.json  ledger_99999_88888.json  ledger_999_8001.json  ledger_999_8002.json  ledger_999_8003.json  ledger_999_8006.json  ledger_999_999.json  ledger_999_9995.json  ledger_999_9996.json  ledger_999_9998.json  ledger_test3_session3.json  ledger_test_agent_test_session.json  ledger_test_test_session.json  ledger_test_user_test_comm.json  ledger_test_user_test_delegation.json  ledger_test_user_test_nested.json  ledger_test_user_test_parallel.json  ledger_test_user_test_seq.json  payment_ledger.json  (+1 more)
coding/: dataset.txt
core/: __init__.py  agent_personality.py  agent_tools.py  cache_loaders.py  circuit_breaker.py  compute_optimizer.py  config_cache.py  event_loop.py  file_cache.py  http_pool.py  platform_paths.py  port_registry.py  resonance_identifier.py  resonance_profile.py  resonance_tuner.py  resource_governor.py  session_cache.py
deploy/: deployment-manifest.json  marketing_flywheel_setup.sh
desktop/: __init__.py  ai_key_vault.py
docs/: CNAME  REDDIT_LAUNCH_POST.md  downloads.md  index.md
docs/api/: a2a.md  (+5 more)
examples/: interactive_create_agent.py  run_create_coding_agent.py  run_ecommerce_agent_ap2.py
hart_sdk/: __init__.py  ai_client.py  app_builder.py  config_client.py  environment_client.py  event_client.py  platform_detect.py
hevolvearmor/: Cargo.toml  pyproject.toml
hevolvearmor/hevolvearmor/: __init__.py  _builder.py  _keygen.py  _loader.py  _native.cp311-win_amd64.pyd
hevolvearmor/src/: lib.rs
hevolvearmor/tests/: test_full_suite.py
hevolvebot-admin-dashboard/: index.html  package.json  run-with-backend.bat  run-with-backend.sh  run.bat  run.sh  tailwind.config.js
integrations/: __init__.py  agentic_router.py  web_crawler.py
nixos/: .gitattributes  flake.nix
prompts/: .67_new.json.swp  0.json  1.json  113.json  113_0_1.json  113_0_2.json  113_0_3.json  115.json  115_0_1.json  115_0_10_vlm_agent.json  115_0_11_vlm_agent.json  115_0_12_vlm_agent.json  115_0_13_vlm_agent.json  115_0_14_vlm_agent.json  115_0_15_vlm_agent.json  115_0_16_vlm_agent.json  115_0_17_vlm_agent.json  115_0_18_vlm_agent.json  115_0_19_vlm_agent.json  115_0_1_vlm_agent.json  115_0_2.json  115_0_20_vlm_agent.json  115_0_21_vlm_agent.json  115_0_22_vlm_agent.json  115_0_2_vlm_agent.json  115_0_3.json  115_0_3_vlm_agent.json  115_0_4.json  115_0_4_vlm_agent.json  115_0_5.json  115_0_5_vlm_agent.json  115_0_6.json  115_0_6_vlm_agent.json  115_0_7_vlm_agent.json  115_0_8_vlm_agent.json  115_0_9_vlm_agent.json  115_0_recipe.json  115_1_1.json  115_1_2.json  115_1_3.json  (+598 more)
scripts/: armor_hevolveai.py  compile_hevolveai.py  create_torrent.sh  generate_master_keypair.py  generate_regression_report.py  issue_regional_cert.py  run.bat  run.sh  run_e2e_tests.bat  run_e2e_tests.sh  run_regression.bat  run_regression.sh  run_tests.bat  run_tests.sh  run_with_tracing.bat  run_with_tracing.sh  setup_vlm.py  sign_release.py  start_cloud.bat  start_cloud.sh  start_docker.sh  start_flat.bat  start_flat.sh  start_regional.bat  start_regional.sh  test_distributed_manual.py  update_release_hashes.py
security/: __init__.py  action_classifier.py  ai_governance.py  audit_log.py  channel_encryption.py  crypto.py  dlp_engine.py  edge_privacy.py  hevolveai_manifest.json  hive_guardrails.py  hsm_provider.py  hsm_trust.py  immutable_audit_log.py  jwt_manager.py  key_delegation.py  master_key.py  mcp_sandbox.py  middleware.py  native_hive_loader.py  node_integrity.py  node_watchdog.py  origin_attestation.py  pre_trust_contract.py  prompt_guard.py  rate_limiter_redis.py  release_hash_registry.py  runtime_monitor.py  safe_deserialize.py  sanitize.py  secret_redactor.py  secrets_manager.py  source_protection.py  system_requirements.py  tls_config.py
tests/: Dockerfile.mock-apis  Dockerfile.mock-crossbar  Dockerfile.test  __init__.py  boot-qemu-for-test.sh  complex_test_report_20251023_211525.json  complex_test_report_20251023_214533.json  complex_test_report_20251024_120016.json  conftest.py  deploy-vm-test.sh  docker-compose.test.yml  e2e-os-smoke.sh  mcp_servers_test.json  realworld_resonance_test.py  run_coverage.py  run_runtime_tests.sh  test_action_execution.py  test_ad_hosting_rewards.py  test_agent_baseline_service.py  test_agent_creation.py  test_agent_dashboard.py  test_agent_engine.py  test_agent_network_resilience.py  test_all_agents_live.py  test_atomic_json.py  test_auto_discovery.py  test_builtin_commands.py  (+103 more)
(+1117 files in other folders)
