[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ledger"
version = "1.1.0"
description = "A framework-agnostic task tracking system for AI agents with persistent memory, 15 task states, delegation, and rollback support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agent Ledger Contributors"}
]
maintainers = [
    {name = "Agent Ledger Contributors"}
]
keywords = [
    "ai",
    "agents",
    "task-tracking",
    "memory",
    "ledger",
    "autonomous",
    "langchain",
    "autogen",
    "crewai",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = []  # Zero core dependencies!

[project.optional-dependencies]
redis = ["redis>=4.0.0"]
mongodb = ["pymongo>=4.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
all = [
    "redis>=4.0.0",
    "pymongo>=4.0.0",
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/agent-ledger"
Documentation = "https://github.com/yourusername/agent-ledger#readme"
Repository = "https://github.com/yourusername/agent-ledger"
Issues = "https://github.com/yourusername/agent-ledger/issues"
Changelog = "https://github.com/yourusername/agent-ledger/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_ledger*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
agent_ledger = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py37"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]  # Line too long - handled by black

[tool.coverage.run]
source = ["agent_ledger"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
